--- a/Shope/Views/Shared/_Layout.cshtml
+++ b/Shope/Views/Shared/_Layout.cshtml
@@ -57,7 +57,7 @@
                             <li>@Html.ActionLink("Orders", "Index", "Orders")</li>
                             <li>@Html.ActionLink("customers", "Index", "customers")</li>
                             <li>@Html.ActionLink("Products Sold Report", "ProductsReports", "Orders")</li>
-                            <li>@Html.ActionLink("Addresses Store", "Index", "Addresses")</li>
+                            <li>@Html.ActionLink("Cart", "cart", "Products")</li>
                         }
                     }
 
