--- a/Shope/Views/Products/ProductHome.cshtml
+++ b/Shope/Views/Products/ProductHome.cshtml
@@ -114,7 +114,7 @@
                                 <p hidden>
                                     <input type="number" name="productid" value="@Html.DisplayFor(modelItem => item.Id)" />
                                 </p>
-                                <input type="number"min="1" max="3" value="1" name="unit" />
+                                <input type="number"min="1" value="1" name="unit" />
                                 <input type="submit" value="לפרטים ולרכישה" style="background-color:antiquewhite"/>
                             </form>
                         </div>
