view->ProductHome->fotter view->Home->contact

--- a/Shope/Views/Home/Contact.cshtml
+++ b/Shope/Views/Home/Contact.cshtml
@@ -1,17 +1,48 @@
-﻿@{
-    ViewData["Title"] = "Contact";
-}
-<h2>@ViewData["Title"]</h2>
-<h3>@ViewData["Message"]</h3>
+﻿<!DOCTYPE html>
+<html lang="he">
+<head>
+    <meta charset="utf-8" />
 
-<address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
-    <abbr title="Phone">P:</abbr>
-    425.555.0100
-</address>
+    <style>
+        body {
+            background-color: antiquewhite;
+        }
 
-<address>
-    <strong>Support:</strong> <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
-</address>
+        h3 {
+            font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+        }
+    </style>
+
+
+</head>
+
+<body dir="rtl">
+    <br />
+
+    <p><h3> ניסיון ששווה זהב</h3></p>
+
+    <p><h4>למעלה מעשר שנים אנחנו עוסקים בעסקי התכשיטים והשעונים</h4></p>
+    <p><h4>סוד ההצלחה שלנו טמון באמון שיש ללקוחותנו בנו</h4></p>
+    <br />
+
+    <img src="~/images/החנות.jpg" width="600" height="450" />
+
+    <br />
+    <br />
+    <p><h5>מתחם הבורסה תל אביב</h5></p>
+    <p><h5>טלפון 03-54555454</h5></p>
+    <br />
+    <br />
+    <a class="map">
+        <iframe width="460" height="215" frameborder="0" scrolling="no" marginheight="0"
+                marginwidth="0" src="//maps.google.com/?ie=UTF8&hq=&hnear=%D7%A8%D7%97%D7%95%&ll=32.084508,34.801830& spn=0.128909,0.246677&t=m&z=13&vpsrc=6&output=embed"></iframe><br /><small><a href="//maps.google.com/?ie=UTF8&hq=&hnear=%D7%A8%D7%97%D7%95%D7%91%D7%&ll=32.0,34.8; spn=0.128909,0.246677&t=m&z=13&vpsrc=6&source=embed" style="color:#0000FF;text-align:left"></a></small>
+    </a>
+
+
+
+
+
+</body>
+
+
+</html>
