--- a/Shope/Views/Products/ProductHome.cshtml
+++ b/Shope/Views/Products/ProductHome.cshtml
@@ -127,6 +127,25 @@
 
         </div>
     </div>
+    <footer>
+        <div class="container">
+
+            <div class="row">
+                <div class="col">
+
+                    <div class="col-sm-3 well ">
+
+                        <ul>
+                            <li><a href="~/Products/cart"><h4>העגלה שלי</h4></a> </li>
+                            <li><a href="~/Customers/Register"><h4>הרשמה</h4></a></li>
+                            <li><a href="~/Customers/Login"><h4>התחברות</h4></a></li>
+                            <li><a href="~/Home/Contact"><h4>אודות</h4></a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 
 
