--- a/Shope/Views/Shared/_Layout.cshtml
+++ b/Shope/Views/Shared/_Layout.cshtml
@@ -56,7 +56,7 @@
                             <li>@Html.ActionLink("Products", "Index", "Products")</li>
                             <li>@Html.ActionLink("Orders", "Index", "Orders")</li>
                             <li>@Html.ActionLink("customers", "Index", "customers")</li>
-                            <li>@Html.ActionLink("Products Sold Report", "MyOrders", "Orders")</li>
+                            <li>@Html.ActionLink("Products Sold Report", "OrdersByUsers", "OrderAndProducts")</li>
                             <li>@Html.ActionLink("Cart", "cart", "Products")</li>
                         }
                     }
