--- a/Shope/Views/Shared/_Layout.cshtml
+++ b/Shope/Views/Shared/_Layout.cshtml
@@ -15,12 +15,13 @@
               asp-fallback-test-class="sr-only" asp-fallback-test-property="position" asp-fallback-test-value="absolute" />
         <link rel="stylesheet" href="~/css/site.min.css" asp-append-version="true" />
     </environment>
+
 </head>
 <body>
-    
+
     @*<a href="Customers/Login" class="btn btn-info btn-lg">
-        <span class="glyphicon glyphicon-log-out"></span> Log out
-    </a>*@
+            <span class="glyphicon glyphicon-log-out"></span> Log out
+        </a>*@
     <nav class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
@@ -63,21 +64,21 @@
 
 
                     @*@if (Global.Admin == 1)
-                {
-                    <li>@Html.ActionLink("Home", "ProductHome", "Products")</li>
-                    <li>@Html.ActionLink("Orders", "Index", "Orders")</li>
-        <li>@Html.ActionLink("customers", "Index", "customers")</li>
-                    <li>@Html.ActionLink("User Purchases Report", "UserReports", "Orders")</li>
-                    <li>@Html.ActionLink("Products Sold Report", "ProductsReports", "Orders")</li>
-        <li>@Html.ActionLink("Addresses Store", "Index", "Addresses")</li>
-                    <li>@Html.ActionLink("Logout", "Logout", "Customers")</li>
-                }*@
+                                {
+                                    <li>@Html.ActionLink("Home", "ProductHome", "Products")</li>
+                                    <li>@Html.ActionLink("Orders", "Index", "Orders")</li>
+                        <li>@Html.ActionLink("customers", "Index", "customers")</li>
+                                    <li>@Html.ActionLink("User Purchases Report", "UserReports", "Orders")</li>
+                                    <li>@Html.ActionLink("Products Sold Report", "ProductsReports", "Orders")</li>
+                        <li>@Html.ActionLink("Addresses Store", "Index", "Addresses")</li>
+                                    <li>@Html.ActionLink("Logout", "Logout", "Customers")</li>
+                                }*@
 
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                     @*<li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
-        <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
-        <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
-        <li><a asp-area="" asp-controller="Home" asp-action="Admin">Admin</a></li>*@
+                        <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
+                        <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
+                        <li><a asp-area="" asp-controller="Home" asp-action="Admin">Admin</a></li>*@
                 </ul>
             </div>
         </div>
@@ -85,9 +86,9 @@
     <div class="container body-content">
         @RenderBody()
         <hr />
-        <footer>
-            <p>&copy; 2019 - Shope</p>
-        </footer>
+        @*<footer>
+                <p>&copy; 2019 - Shope</p>
+            </footer>*@
     </div>
 
     <environment include="Development">
@@ -112,5 +113,6 @@
     </environment>
 
     @RenderSection("Scripts", required: false)
+    @RenderSection("Styles", required: false)
 </body>
 </html>
