--- a/Shope/Views/Products/Payment.cshtml
+++ b/Shope/Views/Products/Payment.cshtml
@@ -49,7 +49,7 @@
         }
 
         .container {
-            background-color: #f2f2f2;
+            
             padding: 5px 20px 15px 20px;
             border: 1px solid lightgrey;
             border-radius: 3px;
@@ -106,11 +106,10 @@
 </head>
 <body>
 
-    <h2>Responsive Checkout Form</h2>
-    <p>Resize the browser window to see the effect. When the screen is less than 800px wide, make the two columns stack on top of each other instead of next to each other.</p>
+    @*<h2>Responsive Checkout Form</h2>*@
     <div class="row">
         <div class="col-75">
-            <div class="container">
+            <div class="container-fluid">
                 <form asp-contoller="Products" asp-action="CreateAuto">
 
                     <div class="row">
@@ -177,8 +176,8 @@
             { count += Global.CurrentCart.Products[i].Unit;
             }
          }
-        <div class="col-25">
-            <div class="container">
+        <div class="col-50">
+            <div class="container-fluid">
                 <h4>Cart <span class="price" style="color:black"><i class="fa fa-shopping-cart"></i> <b>@count</b></span></h4>
                 <p>
                     <a href="cart">רשימת המוצרים שלך</a>
